[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://levelTileSet/characters.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 416, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "landing",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "punch",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "slash",
"speed": 2.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 25, 28 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 10, 2.588, 9.659, 5, 8.66, 7.071, 7.071, 8.66, 5, 9.659, 2.588, 10, 0, 9.659, -2.588, 8.66, -5, 7.071, -7.071, 5, -8.66, 2.588, -9.659, 0, -10 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, -25, 18, -16, 18, 21, -18, 21, -18, -16 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
animation = "walk"

[node name="CatchArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CatchShape" type="CollisionShape2D" parent="CatchArea"]
position = Vector2( 0, 13 )
shape = SubResource( 18 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
scale = Vector2( 7.15237, 5.44014 )

[node name="RayRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 8, 28 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )

[node name="RayLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( -8, 28 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 15 )

[node name="RayDownRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 18, 13 )
enabled = true

[node name="RayDownLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( -18, 13 )
enabled = true

[node name="Visibility" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="VisibilyShape" type="CollisionShape2D" parent="Visibility"]
position = Vector2( 10, 0 )
scale = Vector2( 10, 10 )
z_as_relative = false
shape = SubResource( 20 )

[node name="BodyShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 21 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="area_entered" from="CatchArea" to="." method="_on_CatchArea_area_entered"]
[connection signal="area_exited" from="CatchArea" to="." method="_on_CatchArea_area_exited"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_CatchArea_body_entered"]
[connection signal="body_exited" from="CatchArea" to="." method="_on_CatchArea_body_exited"]
[connection signal="area_entered" from="Visibility" to="." method="_on_Visibility_area_entered"]
[connection signal="area_exited" from="Visibility" to="." method="_on_Visibility_area_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
